# alman

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  Gemfile  README.md  _config.yml  about.md  astro.config.mjs  index.md  markdown.config.mjs  package-lock.json  package.json  pyproject.toml
_includes/: head.html  spec.al.md  spec.de.md  spec.md
_posts/: 2024-05-04-economic-burden-of-language-complexity.md  2024-07-06-frequencies-german-definite-articles.md  2025-02-07-out-of-stealth.md
alman/: build.py  validate.py
benchmark-results/: 2026-07-11-complete-thinking-benchmark-report.md  2026-07-11-deepseek-v4-flash-hf-novita-thinking.json  2026-07-11-deepseek-v4-pro-hf-novita-thinking.json  2026-07-11-gemma4-26b-thinking.json  2026-07-11-glm-5.2-hf-novita-thinking.json  2026-07-11-hf-inference-providers-thinking-comparison.md  2026-07-11-kimi-k2.7-code-hf-novita-thinking.json  2026-07-11-local-thinking-comparison.md  2026-07-11-qwen36-35b-thinking.json  2026-07-12-gpt-5.4-mini-xhigh.json  2026-07-12-gpt-5.6-luna-xhigh.json  2026-07-12-gpt-5.6-sol-xhigh.json  2026-07-12-gpt-5.6-terra-xhigh.json  2026-07-12-minimax-m3-hf-novita-thinking.json  2026-07-12-more-hf-inference-providers-thinking-comparison.md  2026-07-12-nemotron3-ultra-hf-together-thinking.json  2026-07-12-openai-xhigh-comparison.md  2026-07-12-qwen36-35b-hf-deepinfra-thinking.json  2026-07-12-qwen36-35b-thinking-pp15.json  2026-07-12-step3.7-flash-hf-deepinfra-thinking.json  2026-07-13-claude-sonnet-5-xhigh.json  2026-07-13-claude-sonnet-5-xhigh.md  2026-07-13-gpt-5.4-mini-xhigh.json  2026-07-13-gpt-5.6-luna-xhigh.json  2026-07-13-gpt-5.6-sol-xhigh.json  2026-07-13-gpt-5.6-terra-xhigh.json  2026-07-13-openai-updated-rules-comparison.md  2026-07-15-bonsai-27b-1bit-thinking.json  2026-07-15-claude-sonnet-5-xhigh.json  2026-07-15-deepseek-v4-flash-hf-novita-thinking.json  2026-07-15-deepseek-v4-pro-hf-novita-thinking.json  2026-07-15-expanded-curated-thinking-comparison.md  2026-07-15-gemma4-26b-thinking.json  2026-07-15-glm-5.2-hf-novita-thinking.json  2026-07-15-gpt-5.4-mini-xhigh.json  2026-07-15-gpt-5.6-luna-xhigh.json  2026-07-15-gpt-5.6-sol-xhigh.json  2026-07-15-gpt-5.6-terra-xhigh.json  2026-07-15-kimi-k2.7-code-hf-novita-thinking.json  2026-07-15-minimax-m3-hf-novita-thinking.json  (+12 more)
(+165 files in other folders)
