[project]
name = "alman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.245",
    "jsonschema>=4.23.0",
    "openai>=2.45.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "pytest>=8.3.4",
]

[tool.setuptools]
py-modules = ["alman"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alman"]

[project.scripts]
build = "alman.build:main"
bench-local = "alman.bench.local_run:main"
bench-result = "alman.bench.results:main"
